# CPPA

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
src/: graphadapter.cc  graphadapter.hh  graphadapter.hxx  imageadapter.hh  imageadapter.hxx  main.cc  test.cc  test.hh
